--- a/HTM/about/S/c.css
+++ b/HTM/about/S/c.css
@@ -16,6 +16,7 @@ h1 {
             -webkit-background-size: 200% 100%;
             /* 应用动画flowCss 12秒速度 无限循环 线性匀速动画*/
             -webkit-animation: flowCss 12s infinite linear;
+            text-align: right;
         }
 
         @-webkit-keyframes flowCss {
