--- a/HTM/about/S/c.css
+++ b/HTM/about/S/c.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'ziti';
+  src: url('fusion-pixel-12px-monospaced-ko.ttf') format('truetype');
+}
+
+
 h1 {
             background: -webkit-linear-gradient(135deg,
                     #0eaf6d,
@@ -16,6 +22,7 @@ h1 {
             -webkit-background-size: 200% 100%;
             /* 应用动画flowCss 12秒速度 无限循环 线性匀速动画*/
             -webkit-animation: flowCss 12s infinite linear;
+            font-family: "ziti";
             text-align: right;
         }
 
