--- a/about/S/c.css
+++ b/about/S/c.css
@@ -30,3 +30,15 @@ h6 {
 div {
   font-family: "ziti";
 }
+p{
+  font-family: "ziti";
+}
+main{
+  font-family: "ziti";
+}
+a{
+  font-family: "ziti";
+}
+p{
+  font-family: "ziti";
+}
