--- a/about/S/c.css
+++ b/about/S/c.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'ziti';
-  src: url ('https://utac.us.kg/about/S/Quicksand-Bold.ttf) format (' truetype')；
+  src: url ('/about/S/Quicksand-Bold.ttf') format (' truetype');
 
   }
 
