--- a/about/S/c.css
+++ b/about/S/c.css
@@ -3,13 +3,13 @@
     @font-face
     {
         font-family: 'ft';
-        src: url(https://utac.us.kg/about/S/MapleMono-ExtraBold.ttf) format('truetype');
+        src: url(https://utac99645.top/about/S/MapleMono-ExtraBold.ttf) format('truetype');
     }
 
     body
     {
         font-family: "ft";
-        background-image: url(https://utac.us.kg/bg/107290818_p0.png);
+        background-image: url(https://utac99645.top/bg/107290818_p0.png);
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
